# oqs-provider

./: CMakeLists.txt  ReadMe.md  main.c  oqs-kem.c  oqs-provider.c  oqs-provider.h  oqs-sig.c  vcpkg.json
test/: load-test.c  test-kem.c  test-openssl.c  test-sig.c
